# lox

./: .env.example  .gitignore  LICENSE  Makefile  Procfile  README.md  TODO.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: README.md  app.py  auth.py  bls_client.py  cache.py  calendar_data.py  data_fetchers.py  investors.py  lii_calculator.py  lii_categories.py  models.py  monte_carlo.py  news_utils.py  palmer.py  portfolio.py  positions.py  quotes.py  regime_history.py  regime_utils.py  requirements.txt  trade_config.py  trades.py
data/: README.md  nav_flows.csv  nav_investor_flows.csv  nav_sheet.csv
docs/: ARCHITECTURE.md  ARCHITECTURE_SLEEVES.md  CHANGELOG.md  CLI_REFERENCE.md  COMMANDS_GUIDE.md  COMMANDS_GUIDE.rtf  DEMO_OUTPUT.md  EFFICIENCY_REVIEW.md  EXECUTIVE_SUMMARY.md  HEDGE_COMMAND_GUIDE.md  HEDGE_FUND_APPROACH.md  HEDGE_VS_DIRECTIONAL.md  METHODOLOGY.md  ML_SCENARIO_ANALYSIS.md  MONTE_CARLO_INTERPRETABILITY.md  MONTE_CARLO_V01_SUMMARY.md  PROJECT_CONSTITUTION.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_NOTES_AUTOPILOT.md  SCENARIO_ANALYSIS.md  SCENARIO_IMPLEMENTATION_SUMMARY.md  TECHNICAL_SPEC.md  TRADE_IDEAS_COMMANDS.md  V3_QUICK_START.md  V3_REAL_DATA_INTEGRATION.md  V3_SUMMARY.md
examples/: scenario_analysis_example.py
lox/: cli.py  config.py
lox/gov/: dts.py  (+9 more)
scripts/: update_readme.py
tests/: conftest.py  test_altdata_fmp_normalize.py  test_autopilot_stop_candidates.py  test_budget_scan.py  test_cli_smoke.py  test_commodities_regime.py  test_dts.py  test_dts_flows.py  test_earnings_outlook.py  test_fci_feature_matrix.py  test_fed_bs.py  test_fiscal_auction_metrics.py  test_fiscal_auction_split.py  test_fiscal_regime.py  test_fiscal_snapshot_regime.py  test_funding_correlations.py  test_funding_regime.py  test_household_regime.py  test_macro_playbook.py  test_monetary_regime.py  test_nav_investors.py  test_nav_store.py  test_net_liquidity.py  test_news_regime.py  test_occ.py  test_options_etf_under_budget_sort.py  test_options_moonshot.py  test_options_most_traded.py  test_panel_eval_smoke.py  test_pick_best_delta_theta.py  test_portfolio_universe_starter.py  test_qra.py  test_rates_regime.py  test_sp500_universe.py  test_stacked_signals.py  test_strategies_aggregator.py  test_suggest_scoring.py  (+5 more)
(+601 files in other folders)
