[project]
name = "avocado"
version = "0.1.0"
description = "Execution-aware AI-assisted options selector using Alpaca."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alpaca-py>=0.42.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "openai>=1.40.0",
  "scikit-learn>=1.3"
]

[project.scripts]
avocado = "ai_options_trader.cli:app"
ai-options-trader = "ai_options_trader.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
