[project]
name = "lox"
version = "0.1.0"
description = "Discretionary macro research platform with systematic tools for regime-aware portfolio management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alpaca-py>=0.42.0",
  "pytz>=2024.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "requests>=2.31",
  "httpx>=0.25.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "openai>=1.40.0",
  "scikit-learn>=1.3",
  "fredapi>=0.5.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dashboard = [
  "flask>=3.0.0",
  "gunicorn>=21.0.0",
  "flask-sqlalchemy>=3.1.0",
  "flask-login>=0.6.3",
  "flask-bcrypt>=1.0.1",
  "psycopg2-binary>=2.9.0",
]

[project.scripts]
lox = "lox.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
